<resources>
    <string name="app_name">Easyfind</string>
    <string name="welcome">Welcome to Easyfind</string>
    <string name="provider">login as provider</string>
    <string name="user">login as user</string>
    <string name="logo">Easyfind logo</string>
    <string name="action_settings">Settings</string>
    <string name="service">Services</string>
    <string name="medical_stores">MEDICAL STORES</string>
    <string name="medical_centers">HOSPITALS</string>
    <string name="pizza_houses">PIZZA HOUSES</string>
    <string name="quit">Quit</string>
    <string name="title_activity_app2userlogin">App2userloginActivity</string>
    <string name="title_activity_userservicepage">userservicepage</string>
    <string name="title_activity_user_services">UserServices</string>
    <string name="title_activity_piza_houses">Piza_houses</string>
    <string name="title_activity_hospital">Hospital</string>
    <!-- Pizza Menus -->
    <string name="menu1">Shrimp Pizza......................12,900KW</string>
    <string name="menu2">Pizza, a living Buddha...........9,900KW"</string>
    <string name="menu3">Hawaiian Shrimp Pizza.......11,900KW</string>
    <string name="menu4">Derry Pizza...........................9,900KW</string>
    <string name="menu5">Tender Chicken Pizza...........9,900KW</string>
    <string name="menu6">Italian Cheese Pizza.............6,000KW</string>
    <string name="menu7">Maru combination pizza.......6,900KW</string>
    <string name="menu8">Bulgogi Pizza.......................8,900KW</string>
    <string name="menu9">Sweet Potato Pizza..............7,900KW</string>
    <string name="next_button">Next</string>
    <string name="desc1">Details</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCpGHM1ZKE290S5Rse-Q2Ulp3ECNTVQb5E
    </string>
</resources>
